[package]
name = "teardown_patcher"
authors = ["stachu"]
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-logging = "2.0.2"
winreg = "0.52.0"
log = "0.4.21"
rfd = "0.14.0"
open = "5.1.2"
zip = "0.6.6"
