[package]
name = "teardown_patcher"
authors = ["stachu"]
version = "1.0.3"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
simple-logging = "2.0.2"
winreg = "0.52.0"
log = "0.4.21"
rfd = "0.14.1"
open = "5.1.2"
zip = "1.1.4"
toml = "0.8.12"
